# communication

score/mw/com/impl/: BUILD  generic_skeleton.cpp  generic_skeleton_event_binding_factory_impl.cpp  generic_skeleton_event_test.cpp  generic_skeleton_test.cpp  i_generic_skeleton_event_binding_factory.h
score/mw/com/impl/bindings/mock_binding/: BUILD  generic_skeleton_event.h
score/mw/com/impl/plumbing/: BUILD  generic_skeleton_event_binding_factory.cpp  generic_skeleton_event_binding_factory.h  generic_skeleton_event_binding_factory_impl.cpp  generic_skeleton_event_binding_factory_impl.h  generic_skeleton_event_binding_factory_mock.h
score/mw/com/test/generic_skeleton/: BUILD.bazel  generic_typed_interaction_app.cpp  logging.json  mw_com_config.json
score/mw/com/test/generic_skeleton/integration_test/: BUILD.bazel  test_generic_typed_interaction.py
